# raumklang

./: .gitignore  Cargo.toml  LICENSE  README.md  audio.rs
.github/workflows/: ci.yml  rust.yml
raumklang-cli/: Cargo.toml
raumklang-cli/src/: main.rs
raumklang-core/: Cargo.toml
raumklang-core/src/: audio.rs  impulse_response.rs  lib.rs  loudness.rs  signals.rs  sweep.rs  window.rs
raumklang-core/src/signals/: noise.rs  sweep.rs
raumklang-core/src/signals/sweep/: exponential.rs
raumklang-gui/: Cargo.toml
raumklang-gui/fonts/: icons.toml
raumklang-gui/src/: audio.rs  data.rs  icon.rs  log.rs  main.rs  model.rs  plotting.rs  screen.rs  tab.rs  ui.rs  widget.rs  window.rs
raumklang-gui/src/audio/: driver.rs  loudness.rs  measurement.rs  process.rs
raumklang-gui/src/components/: mod.rs  window_settings.rs
raumklang-gui/src/data/: audio.rs  chart.rs  charts.rs  directory.rs  frequency_response.rs  impulse_response.rs  measurement.rs  mod.rs  model.rs  project.rs  recent_projects.rs  recording.rs  sample_rate.rs  samples.rs  spectral_decay.rs  spectrogram.rs  store.rs  window.rs
raumklang-gui/src/data/measurement/: config.rs  loopback.rs
raumklang-gui/src/data/project/: analyses.rs  file.rs  settings.rs
raumklang-gui/src/data/recording/: port.rs  volume.rs
raumklang-gui/src/data/window/: handle.rs
raumklang-gui/src/screen/: frequency_response.rs  landing.rs  main.rs
raumklang-gui/src/screen/main/: analyses.rs  chart.rs  frequency_response.rs  impulse_response.rs  impulse_responses.rs  measurement.rs  measurements.rs  modal.rs  recording.rs  spectral_decay.rs  spectral_decay_config.rs  spectrogram_config.rs  tab.rs
raumklang-gui/src/screen/main/chart/: recording.rs  spectrogram.rs  waveform.rs
raumklang-gui/src/screen/main/modal/: pending_window.rs  save_project.rs  spectral_decay_config.rs  spectrogram_config.rs
raumklang-gui/src/screen/main/recording/: page.rs
raumklang-gui/src/screen/main/recording/page/: component.rs  measurement.rs  signal_setup.rs
raumklang-gui/src/screen/main/tab/: frequency_responses.rs  impulse_responses.rs  measurements.rs
raumklang-gui/src/screen/main/tab/measurements/: recording.rs
raumklang-gui/src/screen/main/tab/measurements/recording/: page.rs
raumklang-gui/src/screen/main/tab/measurements/recording/page/: component.rs  measurement.rs  signal_setup.rs
raumklang-gui/src/tab/: landing.rs  measurements.rs
raumklang-gui/src/tabs/: frequency_response.rs  impulse_response.rs  impulse_resposne.rs  measurements.rs  mod.rs  signals.rs
raumklang-gui/src/ui/: analysis.rs  frequency_response.rs  impulse_response.rs  measurement.rs  spectral_decay.rs  spectrogram.rs
raumklang-gui/src/ui/measurement/: loopback.rs
raumklang-gui/src/widget/: meter.rs  sidebar.rs
raumklang-gui/src/widgets/: chart.rs  charts.rs  colored_circle.rs  meter.rs  mod.rs
raumklang-gui/src/widgets/charts/: frequency_response.rs  impulse_response.rs  measurement.rs
src/: audio.rs  lib.rs  main.rs  main.rs.back2
