[workspace]
members = [
    "raumklang-core",
    "raumklang-cli",
    "raumklang-gui"
]

resolver = "2"

[workspace.dependencies]
raumklang-core = { path = "./raumklang-core" }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
prism = { git = "https://github.com/kunerd/prism.git", branch ="refactor_axis_drawing" }
