[workspace]
members = [
    "raumklang-core",
    "raumklang-cli",
    "raumklang-gui"
]

resolver = "2"

default-members = ["raumklang-gui"]

[workspace.dependencies]
raumklang-core = { path = "./raumklang-core" }

[patch.crates-io]
prism = { git = "https://github.com/kunerd/prism.git", branch ="refactor_axis_drawing" }
