[workspace]
members = [
    "raumklang-core",
    "raumklang-cli",
    "raumklang-gui"
]

resolver = "2"

default-members = ["raumklang-gui"]

[workspace.dependencies]
raumklang-core = { path = "./raumklang-core" }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_core = { git = "https://github.com/iced-rs/iced.git", branch = "master"}
iced_graphics = { git = "https://github.com/iced-rs/iced.git", branch = "master"}
iced_renderer = { git = "https://github.com/iced-rs/iced.git", branch = "master"}
iced_aksel = { path = "../extern/iced_aksel/iced_aksel" }
