[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
raumklang-core = { workspace = true }

anyhow = "1.0.42"
clap = { version = "4.1.11", features = ["derive"] }
ndarray = "0.15.4"
ndarray-stats = "0.5.0"
colorous = "1.0.3"
hound = "3.5"
rustfft = "6.0"
plotters = { version = "0.3", features = ["chrono"] }
