[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raumklang"
path = "src/main.rs"

[dependencies]
raumklang-core = { workspace = true }
prism = "0.2"
tokio = { version = "1.35", features = [ "fs", "macros", "sync" ] }
tokio-stream = "0.1"
rfd = "0.13"
hound = "3.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8.4"
jack = "0.13.3"
ringbuf = "0.4"

rustfft = "6.0"
interpolation = "0.3.0"
directories = "5.0.1"

tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["std", "fmt", "json"]}
atomic_float = "1.1.0"
ndarray = "0.16.1"
ndarray-interp = "0.5.0"
ndarray-stats = "0.6.0"

[dependencies.iced]
version = "0.14.0-dev"
features = ["canvas", "tokio", "advanced", "sipper", "debug"]

[build-dependencies]
iced_fontello = "0.14.0-dev"

